Edited README.md: * finished User Manual + added Compiling Instructions